# DG-LAB-Client

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog.md  CodingStyle.md  DG-LAB-Clinet.slnx  DG-LAB-Clinet.vcxproj  DG-LAB-Clinet.vcxproj.filters  DGLABClient.qrc  DGLABClient.ui  DGLABClinet.ui  LICENSE.txt  NOTICE.txt  NextStep.md  README.md  main.cpp
.github/workflows/: build.yml  release.yml
assets/: README.md
config/: README.md  main.json  system.json  user.json
config/rules/: rules.json
include/: AppConfig.h  AppConfig_impl.hpp  AppConfig_template.hpp  AppConfig_utils.hpp  ComboBoxDelegate.h  ConfigManager.h  ConfigManager_impl.hpp  ConfigStructs.h  Console.h  DGLABClient.h  DGLABClient.ui  DGLABClient_impl.hpp  DGLABClient_template.hpp  DGLABClient_utils.hpp  DGLABClinet.h  DebugLog.h  DebugLog_utils.hpp  DefaultConfigs.h  EditableLabel.h  FileComboBox.h  FormulaBuilderDialog.h  IpSelector.h  MultiConfigManager.h  MultiConfigManager_impl.hpp  PyExecutor.h  PyExecutorManager.h  PyExecutorManager_impl.hpp  PyExecutor_impl.h  PyExecutor_impl.hpp  PyThreadPoolExecutor.h  PyThreadPoolExecutor_impl.h  PyThreadPoolExecutor_impl.hpp  PythonSubprocessManager.h  README.md  Rule.h  RuleManager.h  RuleManager_impl.hpp  SampledWaveformWidget.h  ThemeSelectorDialog.h  TypeConfig.hpp  (+2 more)
python/: Bridge.py  README.md  WebSocketCore.py  main.py
qcss/: README.md  charcoal_pink.qcss  china_red_yellow.qcss  dark_blue_clear_blue.qcss  deepsea_cream.qcss  hermes_orange_navy.qcss  klein_yellow.qcss  light.qcss  mars_green_rose.qcss  night.qcss  offwhite_camellia.qcss  prussian_blue_fog.qcss  style.qcss  style_light.qcss  style_night.qcss  tiffany_blue_cheese.qcss  vandyke_brown_khaki.qcss  vine_purple_tea_green.qcss
screenshot/: README.md
src/: AppConfig.cpp  ComboBoxDelegate.cpp  ConfigManager.cpp  ConfigStructs.cpp  Console.cpp  DGLABClient.cpp  DGLABClinet.cpp  DebugLog.cpp  DefaultConfigs.cpp  EditableLabel.cpp  FileComboBox.cpp  FormulaBuilderDialog.cpp  IpSelector.cpp  MultiConfigManager.cpp  PyExectorExample.cpp  PyExecutor.cpp  PyExecutorManager.cpp  PyThreadPoolExecutor.cpp  PythonSubprocessManager.cpp  README.md  Rule.cpp  RuleManager.cpp  SampledWaveformWidget.cpp  ThemeSelectorDialog.cpp  ValueModeDelegate.cpp
